--- a/pages/assets/assets_landing_page.html
+++ b/pages/assets/assets_landing_page.html
@@ -1,10 +1,10 @@
 ---
-title: Product 1
-keywords: mydoc
-sidebar: product1_sidebar
+title: Assets
+keywords: asset
+sidebar: assets_sidebar
 toc: false
-permalink: p1_landing_page.html
-folder: product1
+permalink: assets_landing_page.html
+folder: assets
 ---
 <div class="row">
         <div class="col-lg-12">
