--- a/pages/playbooks/playbooks_landing_page.html
+++ b/pages/playbooks/playbooks_landing_page.html
@@ -1,10 +1,10 @@
 ---
-title: Product 2
-keywords: mydoc
-sidebar: product2_sidebar
+title: Playbooks
+keywords: playbooks
+sidebar: playbooks_sidebar
 toc: false
-permalink: p2_landing_page.html
-folder: product2
+permalink: playbooks_landing_page.html
+folder: playbooks
 ---
 <div class="row">
         <div class="col-lg-12">
